[package]
name = "encoding"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
bincode.workspace = true
serde.workspace = true
itertools.workspace = true
serde_bytes.workspace = true

common_error = { workspace = true }
sql = { workspace = true }

[dev-dependencies]
paste.workspace = true
hex.workspace = true